_generated-doc/2.7/config/quarkus-vertx-core-general-config-items.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-vertx-core-general-config-items_configuration]]link:#quarkus-vertx-core-general-config-items_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.key-certificate-pem]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.key-certificate-pem[quarkus.vertx.eventbus.key-certificate-pem]`

[.description]
--
PEM Key/cert config is disabled by default.
--|boolean 
|`false`


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.key-certificate-pem.keys]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.key-certificate-pem.keys[quarkus.vertx.eventbus.key-certificate-pem.keys]`

[.description]
--
Comma-separated list of the path to the key files (Pem format).
--|list of string 
|


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.key-certificate-pem.certs]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.key-certificate-pem.certs[quarkus.vertx.eventbus.key-certificate-pem.certs]`

[.description]
--
Comma-separated list of the path to the certificate files (Pem format).
--|list of string 
|


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.key-certificate-jks]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.key-certificate-jks[quarkus.vertx.eventbus.key-certificate-jks]`

[.description]
--
JKS config is disabled by default.
--|boolean 
|`false`


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.key-certificate-jks.path]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.key-certificate-jks.path[quarkus.vertx.eventbus.key-certificate-jks.path]`

[.description]
--
Path of the key file (JKS format).
--|string 
|


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.key-certificate-jks.password]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.key-certificate-jks.password[quarkus.vertx.eventbus.key-certificate-jks.password]`

[.description]
--
Password of the key file.
--|string 
|


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.key-certificate-pfx]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.key-certificate-pfx[quarkus.vertx.eventbus.key-certificate-pfx]`

[.description]
--
PFX config is disabled by default.
--|boolean 
|`false`


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.key-certificate-pfx.path]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.key-certificate-pfx.path[quarkus.vertx.eventbus.key-certificate-pfx.path]`

[.description]
--
Path to the key file (PFX format).
--|string 
|


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.key-certificate-pfx.password]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.key-certificate-pfx.password[quarkus.vertx.eventbus.key-certificate-pfx.password]`

[.description]
--
Password of the key.
--|string 
|


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.trust-certificate-pem]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.trust-certificate-pem[quarkus.vertx.eventbus.trust-certificate-pem]`

[.description]
--
PEM Trust config is disabled by default.
--|boolean 
|`false`


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.trust-certificate-pem.certs]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.trust-certificate-pem.certs[quarkus.vertx.eventbus.trust-certificate-pem.certs]`

[.description]
--
Comma-separated list of the trust certificate files (Pem format).
--|list of string 
|


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.trust-certificate-jks]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.trust-certificate-jks[quarkus.vertx.eventbus.trust-certificate-jks]`

[.description]
--
JKS config is disabled by default.
--|boolean 
|`false`


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.trust-certificate-jks.path]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.trust-certificate-jks.path[quarkus.vertx.eventbus.trust-certificate-jks.path]`

[.description]
--
Path of the key file (JKS format).
--|string 
|


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.trust-certificate-jks.password]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.trust-certificate-jks.password[quarkus.vertx.eventbus.trust-certificate-jks.password]`

[.description]
--
Password of the key file.
--|string 
|


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.trust-certificate-pfx]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.trust-certificate-pfx[quarkus.vertx.eventbus.trust-certificate-pfx]`

[.description]
--
PFX config is disabled by default.
--|boolean 
|`false`


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.trust-certificate-pfx.path]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.trust-certificate-pfx.path[quarkus.vertx.eventbus.trust-certificate-pfx.path]`

[.description]
--
Path to the key file (PFX format).
--|string 
|


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.trust-certificate-pfx.password]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.trust-certificate-pfx.password[quarkus.vertx.eventbus.trust-certificate-pfx.password]`

[.description]
--
Password of the key.
--|string 
|


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.accept-backlog]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.accept-backlog[quarkus.vertx.eventbus.accept-backlog]`

[.description]
--
The accept backlog.
--|int 
|


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.client-auth]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.client-auth[quarkus.vertx.eventbus.client-auth]`

[.description]
--
The client authentication.
--|string 
|`NONE`


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.connect-timeout]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.connect-timeout[quarkus.vertx.eventbus.connect-timeout]`

[.description]
--
The connect timeout.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`60S`


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.idle-timeout]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.idle-timeout[quarkus.vertx.eventbus.idle-timeout]`

[.description]
--
The idle timeout in milliseconds.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.receive-buffer-size]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.receive-buffer-size[quarkus.vertx.eventbus.receive-buffer-size]`

[.description]
--
The receive buffer size.
--|int 
|


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.reconnect-attempts]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.reconnect-attempts[quarkus.vertx.eventbus.reconnect-attempts]`

[.description]
--
The number of reconnection attempts.
--|int 
|`0`


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.reconnect-interval]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.reconnect-interval[quarkus.vertx.eventbus.reconnect-interval]`

[.description]
--
The reconnection interval in milliseconds.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`1S`


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.reuse-address]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.reuse-address[quarkus.vertx.eventbus.reuse-address]`

[.description]
--
Whether or not to reuse the address.
--|boolean 
|`true`


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.reuse-port]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.reuse-port[quarkus.vertx.eventbus.reuse-port]`

[.description]
--
Whether or not to reuse the port.
--|boolean 
|`false`


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.send-buffer-size]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.send-buffer-size[quarkus.vertx.eventbus.send-buffer-size]`

[.description]
--
The send buffer size.
--|int 
|


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.solinger]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.solinger[quarkus.vertx.eventbus.soLinger]`

[.description]
--
The so linger.
--|int 
|


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.ssl]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.ssl[quarkus.vertx.eventbus.ssl]`

[.description]
--
Enables or Disabled SSL.
--|boolean 
|`false`


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.tcp-keep-alive]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.tcp-keep-alive[quarkus.vertx.eventbus.tcp-keep-alive]`

[.description]
--
Whether or not to keep the TCP connection opened (keep-alive).
--|boolean 
|`false`


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.tcp-no-delay]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.tcp-no-delay[quarkus.vertx.eventbus.tcp-no-delay]`

[.description]
--
Configure the TCP no delay.
--|boolean 
|`true`


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.traffic-class]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.traffic-class[quarkus.vertx.eventbus.traffic-class]`

[.description]
--
Configure the traffic class.
--|int 
|


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.trust-all]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.eventbus.trust-all[quarkus.vertx.eventbus.trust-all]`

[.description]
--
Enables or disables the trust all parameter.
--|boolean 
|`false`


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.cluster.host]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.cluster.host[quarkus.vertx.cluster.host]`

[.description]
--
The host name.
--|string 
|`localhost`


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.cluster.port]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.cluster.port[quarkus.vertx.cluster.port]`

[.description]
--
The port.
--|int 
|


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.cluster.public-host]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.cluster.public-host[quarkus.vertx.cluster.public-host]`

[.description]
--
The public host name.
--|string 
|


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.cluster.public-port]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.cluster.public-port[quarkus.vertx.cluster.public-port]`

[.description]
--
The public port.
--|int 
|


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.cluster.clustered]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.cluster.clustered[quarkus.vertx.cluster.clustered]`

[.description]
--
Enables or disables the clustering.
--|boolean 
|`false`


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.cluster.ping-interval]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.cluster.ping-interval[quarkus.vertx.cluster.ping-interval]`

[.description]
--
The ping interval.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`20S`


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.cluster.ping-reply-interval]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.cluster.ping-reply-interval[quarkus.vertx.cluster.ping-reply-interval]`

[.description]
--
The ping reply interval.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`20S`


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.resolver.cache-max-time-to-live]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.resolver.cache-max-time-to-live[quarkus.vertx.resolver.cache-max-time-to-live]`

[.description]
--
The maximum amount of time in seconds that a successfully resolved address will be cached. 
 If not set explicitly, resolved addresses may be cached forever.
--|int 
|`2147483647`


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.resolver.cache-min-time-to-live]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.resolver.cache-min-time-to-live[quarkus.vertx.resolver.cache-min-time-to-live]`

[.description]
--
The minimum amount of time in seconds that a successfully resolved address will be cached.
--|int 
|`0`


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.resolver.cache-negative-time-to-live]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.resolver.cache-negative-time-to-live[quarkus.vertx.resolver.cache-negative-time-to-live]`

[.description]
--
The amount of time in seconds that an unsuccessful attempt to resolve an address will be cached.
--|int 
|`0`


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.resolver.max-queries]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.resolver.max-queries[quarkus.vertx.resolver.max-queries]`

[.description]
--
The maximum number of queries to be sent during a resolution.
--|int 
|`4`


a| [[quarkus-vertx-core-general-config-items_quarkus.vertx.resolver.query-timeout]]`link:#quarkus-vertx-core-general-config-items_quarkus.vertx.resolver.query-timeout[quarkus.vertx.resolver.query-timeout]`

[.description]
--
The duration after which a DNS query is considered to be failed.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`5S`

|===
ifndef::no-duration-note[]
[NOTE]
[[duration-note-anchor]]
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
